[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rust-analyzer-harness"
version = "0.1.0"
description = "A streamlined rust-analyzer interface for LLMs and Claude Code"
authors = [{name = "Gregory Cross"}]
readme = "README.md"
license = {text = "FOSS"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["rust", "rust-analyzer", "lsp", "llm", "claude", "ai", "code-analysis"]

[project.scripts]
ra = "rust_analyzer_harness.cli:main"

[project.urls]
"Homepage" = "https://github.com/gretmn102/rust-analyzer-harness"
"Bug Reports" = "https://github.com/gretmn102/rust-analyzer-harness/issues"
"Source" = "https://github.com/gretmn102/rust-analyzer-harness"

[tool.setuptools]
packages = ["rust_analyzer_harness"]
python-requires = ">=3.8"

[tool.setuptools.package-data]
rust_analyzer_harness = ["*.json"]